package service.implementation;

public class AlmacenService {
}
